# adexplorersnapshot-rs

./: .gitattributes  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust_tests.yml
benches/: parser.rs
data/: snapshot.bak
src/: lib.rs  main.rs
src/guid/: guid.rs  mod.rs
src/output/: mod.rs
src/output/bloodhound/: common.rs  computers.rs  containers.rs  domains.rs  gpos.rs  groups.rs  mod.rs  ous.rs  users.rs
src/output/bloodhound/utils/: aces.rs  meta.rs  mod.rs
src/parser/: adexplorersnapshot.rs  cache.rs  mod.rs  parser.rs
src/security_descriptor/: access_mask.rs  ace.rs  acl.rs  control_flags.rs  mod.rs  sddl.rs
src/sid/: mod.rs  sid.rs
