[package]
name = "ADExplorerSnapshot-rs"
version = "0.1.0"
edition = "2021"


[lib]
name = "adexplorersnapshot"
path = "src/lib.rs"

[[bin]]
name = "convertsnapshot"
path = "src/main.rs"

[[bench]]
name = "parser"


[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
nom = "7.1.3"
memmap2 = "0.9.4"
zip = "2.1.3"
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
rayon = "1.5.1"
tar = "0.4"
flate2 = "1.0"
